--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   google_sign_in: ^4.5.6
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.1
-
+  datetime_picker_formfield: ^1.0.0
+  url_launcher: ^5.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
