--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   firebase_auth: ^0.18.3+1
   firebase_core: ^0.5.1
   datetime_picker_formfield: ^1.0.0
-  geolocator: ^5.3.0
+  geolocator: ^6.2.1
   geocoder: ^0.2.1
   permission_handler: ^4.4.0+2
   webview_flutter: ^1.0.7
@@ -46,6 +46,8 @@ dependencies:
   firebase_storage: ^4.0.1
   rflutter_alert: ^1.1.0
   telephony: ^0.0.9
+  image_downloader: ^0.20.1
+
      
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
